--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -24,6 +24,7 @@ body {
 @import 'detail';
 @import 'shoppingCart';
 @import 'message';
+@import 'errors';
 //  USER
 @import 'userSignIn';
 @import 'userLogin';
